<resources>
    <string name="app_name">CalculatorLayout</string>
    <string name="result_here">Result here</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="multiply_textView">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide_textView">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtract_textView">-</string>
    <string name="_0">0</string>
    <string name="decimal_textView">.</string>
    <string name="equals_textView">=</string>
    <string name="add_textView">+</string>
</resources>